--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -78,6 +78,7 @@
     "last 3 edge versions"
   ],
   "dependencies": {
+    "": "",
     "@ant-design/icons": "^5.0.1",
     "@babel/runtime-corejs3": "^7.22.6",
     "@emotion/babel-preset-css-prop": "^11.2.0",
@@ -208,6 +209,10 @@
     "rison": "^0.1.1",
     "scroll-into-view-if-needed": "^2.2.28",
     "shortid": "^2.2.6",
+    "superset-plugin-chart-hello-world": "file:../../../../../tmp/superset-plugin-chart-hello-world",
+    "superset-plugin-chart-mixed-bar-area": "^0.2.3",
+    "superset-plugin-chart-bar-custom":"^0.1.3",
+    "superset-plugin-chart-mixed-bar-line-custom": "^0.1.1",
     "tinycolor2": "^1.4.2",
     "urijs": "^1.19.8",
     "use-event-callback": "^0.1.0",
