fix: customie superset plugins

--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -88,6 +88,8 @@
     "@fontsource/inter": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@scarf/scarf": "^1.3.0",
+    "@superset-custom/plugin-chart-pie": "^0.10.4",
+    "@superset-custom/plugin-chart-pivot-table": "^0.14.3",
     "@superset-ui/chart-controls": "file:./packages/superset-ui-chart-controls",
     "@superset-ui/core": "file:./packages/superset-ui-core",
     "@superset-ui/legacy-plugin-chart-calendar": "file:./plugins/legacy-plugin-chart-calendar",
@@ -114,6 +116,7 @@
     "@superset-ui/plugin-chart-table": "file:./plugins/plugin-chart-table",
     "@superset-ui/plugin-chart-word-cloud": "file:./plugins/plugin-chart-word-cloud",
     "@superset-ui/switchboard": "file:./packages/superset-ui-switchboard",
+    "@superset-viz-plugins/plugin-chart-donut-pie": "^0.10.1",
     "@types/d3-format": "^3.0.1",
     "@visx/axis": "^3.0.1",
     "@visx/grid": "^3.0.1",
@@ -209,9 +212,11 @@
     "rison": "^0.1.1",
     "scroll-into-view-if-needed": "^2.2.28",
     "shortid": "^2.2.6",
+    "superset-custom-design": "^0.1.0",
+    "superset-plugin-chart-bar-custom": "^0.1.3",
+    "superset-plugin-chart-customized": "^0.1.5",
     "superset-plugin-chart-hello-world": "file:../../../../../tmp/superset-plugin-chart-hello-world",
     "superset-plugin-chart-mixed-bar-area": "^0.2.3",
-    "superset-plugin-chart-bar-custom":"^0.1.3",
     "superset-plugin-chart-mixed-bar-line-custom": "^0.1.1",
     "tinycolor2": "^1.4.2",
     "urijs": "^1.19.8",
